--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <groupId>testProject</groupId>
     <artifactId>com.Test</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <dependencies>
 
         <dependency>
@@ -93,7 +92,18 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.0.0-M3</version>
+                <configuration>
+
+                        <includes>
+                            <include>**/*BaseClass.class</include>
+
+                        </includes>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
             </plugin>
 
         </plugins>
